trunk/Archive2/c3/c6a5c52b00ee5e/output
main.cpp:13:5: error: copying variable of type 'B' invokes deleted constructor
  B b = A(i); // (1)
    ^   ~~~~
main.cpp:9:3: note: 'B' has been explicitly marked deleted here
  B(B const &) = delete;
  ^
1 error generated.
